--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>@FranciscoRB</p>
             </div>
             <div class="descripcion">
-                <p>Soy estudiante de 1º de Desarrollo de aplicaciones web en ceuta, me considero una persona resolutiva y capaz de adaptarme a distintos lenguajes</p>
+                <p>Soy estudiante de 1º de Desarrollo de Aplicaciones Web en Ceuta, me considero una persona resolutiva y capaz de adaptarme a distintos lenguajes</p>
                 <img src="./img/fotoPerfil.svg" alt="fotoPerfil">
             </div>
             <div class="redes-sociales">
